--- a/blog-1/package.json
+++ b/blog-1/package.json
@@ -14,5 +14,8 @@
   "devDependencies": {
     "cross-env": "^6.0.3",
     "nodemon": "^2.0.1"
+  },
+  "dependencies": {
+    "mysql": "^2.17.1"
   }
 }
