--- a/nginx.conf
+++ b/nginx.conf
@@ -8,6 +8,12 @@ worker_processes  1;
 
 #pid        logs/nginx.pid;
 
+# nginx 
+# ng配置文件目录： /usr/local/etc/nginx/nginx.conf
+# 测试配置文件格式是否正确 nginx -t
+# 启动 nginx
+# 重启 nginx -s reload
+# 停止 nginx -s stop
 
 events {
     worker_connections  1024;
