--- a/blog-express/package.json
+++ b/blog-express/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "cross-env NODE_ENV=dev nodemon ./bin/www"
+    "dev": "cross-env NODE_ENV=dev nodemon ./bin/www",
+    "prd": "cross-env NODE_ENV=production nodemon ./bin/www"
   },
   "dependencies": {
     "connect-redis": "^4.0.3",
@@ -15,7 +16,7 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
-    "mysql": "^2.17.1",
+    "mysql": "^2.17.1", 
     "redis": "^2.8.0",
     "xss": "^1.0.6"
   },
